fix some styling bugs on mobile

--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -28,4 +28,5 @@ button {
   font-style: italic;
   background-color: white;
   border-color: grey;
+  color: black;
 }
