--- a/src/TileCanvas/TileCanvas.css
+++ b/src/TileCanvas/TileCanvas.css
@@ -1,6 +1,9 @@
 .tile-canvas {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
   gap: 10px;
 }
 
